# dbterd

./: .flake8  .gitignore  .pre-commit-config.yaml  .publish  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyproject.toml-uv  targetoutput.dbml  versions.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_pr.yml  codecov.yml  publish-docs-beta.yml  publish-docs.yml  pypi-publish.yml  stale.yml
1.1/: 404.html  index.html  license.html  sitemap.xml
1.1/nav/development/: CHANGELOG.html  contributing-guide.html
1.1/overrides/: main.html
1.1/search/: search_index.js  search_index.json
1.10/: 404.html  index.html  license.html  sitemap.xml
1.10-beta/: 404.html  index.html  license.html  sitemap.xml
1.10-beta/search/: search_index.js  search_index.json
1.10/search/: search_index.json
1.11/: 404.html  index.html  license.html  sitemap.xml
1.11/api-docs/: search.js
1.12/: 404.html  index.html  license.html  sitemap.xml
1.12-beta/: 404.html  index.html  license.html  sitemap.xml
1.12-beta/api-docs/: search.js
1.12-beta/search/: search_index.js
1.12/search/: search_index.js  search_index.json
1.13/: 404.html  index.html  license.html  sitemap.xml
1.13/search/: search_index.js  search_index.json
1.14/: 404.html  index.html  license.html  sitemap.xml
1.14/search/: search_index.js  search_index.json
1.15/: 404.html  index.html  license.html  sitemap.xml
1.15/search/: search_index.js  search_index.json
1.16/: 404.html  index.html  license.html  sitemap.xml
1.16/search/: search_index.js  search_index.json
1.17/: 404.html  index.html  license.html  sitemap.xml
1.17/search/: search_index.js  search_index.json
1.18/: 404.html  index.html  license.html  sitemap.xml
1.18/api-docs/: search.js
1.18/search/: search_index.js  search_index.json
1.19/: 404.html  index.html  license.html  sitemap.xml
1.19/api-docs/: search.js
1.19/search/: search_index.js  search_index.json
1.2/: 404.html  index.html  license.html  sitemap.xml
1.2 (Beta)/: 404.html  index.html  license.html  sitemap.xml
1.2 (Beta)/search/: search_index.js  search_index.json
1.2/search/: search_index.js  search_index.json
1.20/: 404.html  index.html  license.html  sitemap.xml
1.20/search/: search_index.js  search_index.json
1.21/: 404.html  index.html  license.html  sitemap.xml
1.21/overrides/: main.html
1.21/search/: search_index.js  search_index.json
1.22/: 404.html  index.html  license.html  sitemap.xml
1.22/api-docs/: search.js
1.22/search/: search_index.js  search_index.json
1.23/: 404.html  index.html  license.html  sitemap.xml
1.23/search/: search_index.js  search_index.json
1.24/: 404.html  hooks.py  index.html  license.html  sitemap.xml
1.24/api-docs/: search.js
1.24/search/: search_index.js  search_index.json
1.25/: 404.html  index.html  license.html  sitemap.xml
1.25/api-docs/: index.html
1.25/search/: search_index.js  search_index.json
1.26/: 404.html  index.html  license.html  sitemap.xml
1.26/search/: search_index.js  search_index.json
1.27/: 404.html  index.html  license.html  sitemap.xml
1.27/search/: search_index.js  search_index.json
1.28/: 404.html  index.html  license.html  sitemap.xml
1.28/api-docs/: search.js
1.28/search/: search_index.js  search_index.json
1.29/: 404.html  index.html  license.html  sitemap.xml
1.29/search/: search_index.js  search_index.json
1.3/: 404.html  index.html  license.html  sitemap.xml
1.3/search/: search_index.js  search_index.json
1.30/: 404.html  index.html  license.html  sitemap.xml
1.30.0/: 404.html  index.html  license.html  sitemap.xml
1.30.0/search/: search_index.js  search_index.json
1.30/search/: search_index.js  search_index.json
1.4/: 404.html  index.html  license.html  sitemap.xml
1.4/search/: search_index.js  search_index.json
1.5/: 404.html  index.html  license.html  sitemap.xml
1.5/search/: search_index.js  search_index.json
1.6/: 404.html  index.html  license.html  sitemap.xml
1.6/search/: search_index.js  search_index.json
1.7/: 404.html  index.html  license.html  sitemap.xml
1.7/search/: search_index.js  search_index.json
1.8/: 404.html  index.html  license.html  sitemap.xml
1.8/search/: search_index.js  search_index.json
1.9/: 404.html  index.html  license.html  sitemap.xml
1.9/search/: search_index.js  search_index.json
PRPs/: FEAT_MODEL_CONTRACT.md
dbterd/: __init__.py  __main__.py  config.py  constants.py  default.py  main.py  types.py
dbterd/adapters/: adapter.py  base.py  dbt_cloud.py  dbt_invocation.py  factory.py  filter.py  meta.py  worker.py
dbterd/api/: __init__.py  base.py
dbterd/cli/: config.py  main.py  params.py
dbterd/core/: base.py  executor.py  filter.py  models.py  relax_policies.py  validation_policy.py
dbterd/helpers/: cli_messaging.py  dict.py  file.py  jsonify.py  log.py  yaml.py
docs/: hooks.py  index.md
docs/overrides/: main.html
latest/: 404.html  index.html  license.html
latest/api-docs/: index.html
latest/overrides/: main.html
samples/dbt-constraints/: ERD.md  catalog.json  manifest.json  readme.md
samples/dbtresto/: ERD.md  catalog.json  erd.py  manifest.json  output.ddb  readme.md
samples/facebookad/: catalog.json  readme.md
samples/fivetranlog/: catalog.json  manifest.json
samples/jaffle-shop/: catalog.json  erd.ddb  erd.py  manifest.json  readme.md
samples/jaffle-shop-v1.11/: catalog.json  manifest.json
samples/model-contract/: catalog.json  manifest.json
samples/shopify/: manifest.json  readme.md
samples/v4-dbtresto/: manifest.json
samples/v7/: manifest.json
samples/v7-fivetranlog/: manifest.json
tests/: conftest.py  test_default.py
tests/adapters/: test_base.py  test_factory.py
tests/cli/: test_cli.py  test_runner.py
tests/helpers/: test_cli_messaging.py  test_file.py  test_jsonify.py
tests/integration/: test_dbterd_run.py
tests/unit/: conftest.py  test_api.py  test_config.py  test_default.py  test_main.py
(+709 files in other folders)
